fixed gap between divs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -227,6 +227,7 @@
       left: 0;
       height: fit-content;
       display: none;
+      font-size: 0px;
     }
 
     .option{
